Implement PWA support with service worker, caching strategies, and icon generation; add manifest and update HTML for PWA compatibility

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
 	<meta name="format-detection" content="telephone=no" />
 	<!-- 手机端网页不显示地址栏 -->
 	<meta name="mobile-web-app-capable" content="yes" />
+	<!-- iOS Safari PWA支持 -->
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<meta name="apple-mobile-web-app-title" content="无名杀" />
 	<!-- 禁止缩放 手机端全屏 -->
 	<meta name="viewport" content="user-scalable=no, viewport-fit=cover" />
+	<!-- PWA 主题颜色 -->
+	<meta name="theme-color" content="#1a1a1a" />
+	<meta name="msapplication-TileColor" content="#1a1a1a" />
+	<meta name="description" content="无名杀 - 三国杀在线游戏" />
+	<!-- PWA Manifest -->
+	<link rel="manifest" href="/manifest.webmanifest" />
+	<!-- iOS 图标 -->
+	<link rel="apple-touch-icon" href="/pwa-icons/icon-192x192.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="/pwa-icons/icon-152x152.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/pwa-icons/icon-192x192.png" />
+	<!-- Windows 磁贴图标 -->
+	<meta name="msapplication-TileImage" content="/pwa-icons/icon-144x144.png" />
 	<title>无名杀</title>
 	<script>
 		"use strict";
