fix SW, PWA, SSL, etc

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<meta name="description" content="无名杀 - 三国杀在线游戏" />
 	<!-- PWA Manifest -->
 	<link rel="manifest" href="/manifest.webmanifest" />
+	<!-- favicon -->
+	<link rel="icon" href="/image/favicon.svg" sizes="32x32" />
 	<!-- iOS 图标 -->
 	<link rel="apple-touch-icon" href="/pwa-icons/icon-192x192.png" />
 	<link rel="apple-touch-icon" sizes="152x152" href="/pwa-icons/icon-152x152.png" />
